app/globals.css
/* ... */
/* ::-webkit-scrollbar-track {
  background: #ffffff; 
  Background color of the track
}
::-webkit-scrollbar-thumb {
  background: #888; 
  Color of the scrollbar handle
}
::-webkit-scrollbar-thumb:hover {
  background: #555;
   Darker color when hovering over the handle
} */
html {
  scroll-behavior: smooth;
  background-color: transparent;
  font-family: "Bitter", serif;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}
body {
  /* color: #00e4b3; */
  overflow: overlay;
  scrollbar-gutter: stable;
}
h5 {
  color: #000000;
}
h1 {
  font-weight: 900;
  font-size: 3rem;
}
@media (max-width: 1024px) {
  h1 {
    font-size: 2.5rem;
  }
}
h2 {
  font-size: 1rem;
}
h3 {
  font-weight: 900;
  font-size: 1.2em;
}
p {
  line-height: 1.4;
  /* background-color: #00051f; */
}
main {
  /* box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.5); */
}
section {
  /* height: calc(100vh - 110px); */
  /* overflow: scroll; */
}
li {
  text-align: left;
}

.full-bg {
  transition: background-color 0.75s ease;
}
.main-body {
  height: calc(100vh - 65px);
  /* background: linear-gradient(0deg, #b5ccea, #e4e8f1); */
  background-size: 300% 300%;
  border-radius: 1px;
  display: flex;
  flex-direction: column;
  align-items: center;
  animation: grow-x 0.4s ease-in-out;
  width: calc(100vw - 20px);
}
@keyframes grow-x {
  0% {
    width: 0px;
  }
  100% {
    width: 100%;
  }
}
.section-body {
  overflow-y: scroll;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  padding-top: 70px;
}
.background-gradient {
  background: linear-gradient(75deg, #e4e8f1, #b0c7e5);
  background-size: 400% 400%;
  -webkit-animation: AnimationName 3s ease infinite;
  -moz-animation: AnimationName 3s ease infinite;
  animation: grow-x 0.4s ease-in-out, AnimationName 3s ease infinite;
}
.background-gradient-dark {
  background: linear-gradient(75deg, #000c28, #1f3655);
  background-size: 400% 400%;
  -webkit-animation: AnimationName 3s ease infinite;
  -moz-animation: AnimationName 3s ease infinite;
  animation: grow-x 0.4s ease-in-out, AnimationName 3s ease infinite;
}

@-webkit-keyframes AnimationName {
  0% {
    background-position: 50% 0%;
  }
  50% {
    background-position: 51% 100%;
  }
  100% {
    background-position: 50% 0%;
  }
}
@-moz-keyframes AnimationName {
  0% {
    background-position: 50% 0%;
  }
  50% {
    background-position: 51% 100%;
  }
  100% {
    background-position: 50% 0%;
  }
}
@keyframes AnimationName {
  0% {
    background-position: 50% 0%;
  }
  50% {
    background-position: 51% 100%;
  }
  100% {
    background-position: 50% 0%;
  }
}

.white-block-section {
  /* position: fixed; */
  width: calc(100vw - 20px);
  height: calc(100vh - 75px);
  display: flex;
}
.left-gate {
  position: fixed;
  width: 60%;
  height: 100vh;
  z-index: 1000;
  transform: translateX(-150%);
  animation: closeGateLeft ease-in-out 1.3s;
}
.right-gate {
  position: fixed;
  width: 60%;
  height: 100vh;
  z-index: 1000;
  transform: translateX(150%);
  animation: closeGateRight ease-in-out 1.3s;
}
@keyframes closeGateLeft {
  0%,
  100% {
    transform: translateX(-150%);
  }
  33%,
  66% {
    transform: translateX(-45%);
  }
}
@keyframes closeGateRight {
  0%,
  100% {
    transform: translateX(150%);
  }
  33%,
  66% {
    transform: translateX(45%);
  }
}
.open-left-gate {
  background-color: white;
  position: fixed;
  width: 60%;
  height: 100vh;
  z-index: 1000;
  transform: translateX(-150%);
  animation: openGateLeft ease-in-out 0.6s 0.4s;
}
.open-right-gate {
  background-color: white;
  position: fixed;
  width: 60%;
  height: 100vh;
  z-index: 1000;
  transform: translateX(150%);
  animation: openGateRight ease-in-out 0.6s 0.4s;
}
@keyframes openGateLeft {
  0% {
    transform: translateX(-50%);
  }
  100% {
    transform: translateX(-150%);
  }
}
@keyframes openGateRight {
  0% {
    transform: translateX(50%);
  }
  100% {
    transform: translateX(150%);
  }
}
.scroll-indicator {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 20px;
  background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.5));
  pointer-events: none; /* Ensure it doesn't block clicks */
  z-index: 10;
}
.see-more {
  position: fixed;
  bottom: 5px;
  z-index: 500;
  animation: slideIn 1.5s forwards;
  border-radius: 100%;
  padding: 5px;
  /* opacity: 0.5; */
  animation: bounceS 5s infinite;
}
.see-more:hover {
  opacity: 0.1;
  /* background-color: rgb(201, 201, 201); */
}
@keyframes bounceS {
  0%,
  90%,
  95%,
  100% {
    transform: translateY(0);
  }
  92.5% {
    transform: translateY(13px);
  }
  97.5% {
    transform: translateY(5px);
  }
}
.project-card:hover {
  /* opacity: 75%; */
  transform: translateY(-10px);
  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
}

.project-card {
  /* transition: transform 0.25s cubic-bezier(0.175, 0.885, 0.32, 1.3) 0.2s; */
  width: 40vw;
  min-width: 300px;
  max-width: 650px;
  /* height: 100%; */
}
.buttons {
  position: absolute;
  display: flex;
  /* overflow-x: scroll; */
  /* overflow-y: visible; */
  justify-content: space-evenly;
  opacity: 0;
  /* top: 12px; */
  /* right: 25px; */
  animation: slideIn 1s forwards 1.5s;
}
.nav-btn {
  padding: 5px;
  border-radius: 5px;
}
.nav-btn:hover {
  cursor: pointer;
  background-color: #2195f378;
  scale: 1.05;
  animation: scale 1s ease-in-out;
}
.bio {
  font-size: 25px;
  line-height: 1.3;
  width: 80%;
  opacity: 0;
  animation: slideIn 1s forwards 1.5s;
}
.home-logo {
  opacity: 0;
  width: 100%;
  max-width: 600px;
  animation: slideIn 1s forwards 1.5s;
  padding-top: 50px;
}
.opening-slide {
  opacity: 0;
  animation: slideIn 1s forwards 0.9s;
  /* animation-delay: 5s; */
}
.resume {
  opacity: 0;
  animation: slideIn 1s forwards 1.5s;
}
.resume-pop {
  background-color: #9bc8d5;
  color: white;
}
.resume-pop:hover {
  background-color: #b2e4f1;
}
/* ... */

